# NDIA-Team-Un-mployed

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
common/: geo.py  logging_setup.py  types.py  utils.py
config/: area_of_interest.geojson  camera_intrinsics.yaml  params.yaml
dashboard/: app.py
data/dem/: dem.tif
data/google_maps_images/: image_001.meta.json  image_002.meta.json  image_003.meta.json  image_004.meta.json  image_005.meta.json  image_006.meta.json  image_007.meta.json  image_008.meta.json  image_009.meta.json  image_010.meta.json  image_011.meta.json  image_012.meta.json  image_013.meta.json  image_014.meta.json  image_015.meta.json  image_016.meta.json  image_017.meta.json  image_018.meta.json  image_019.meta.json  image_020.meta.json  image_021.meta.json  image_022.meta.json  image_023.meta.json  image_024.meta.json  image_025.meta.json  image_026.meta.json  image_027.meta.json  image_028.meta.json  image_029.meta.json  image_030.meta.json  (+71 more)
docs/: architecture.md  interfaces.md
scripts/: build_tile_cache.py  fetch_google_maps_images.py  fetch_kaggle_dataset_images.py  run_demo.sh  sample_imagery_dataset.py  seed_demo_data.sh
system_a/: __init__.py  camera.py  imu.py  service.py
system_b/: __init__.py  dem.py  google_maps.py  server.py  tile_cache.py
system_c/: __init__.py  correlate.py  features.py  pipeline.py  preprocess.py
system_d/: __init__.py  fusion_local_ekf.py  fusion_px4.py  mavlink_out.py
tests/: __init__.py  test_google_maps.py  test_tile_cache.py
workflows/: ci.yml
(+2342 files in other folders)
